# Routes/NumericalRoute.js
@@ -1,9 +1,17 @@
 const express = require('express');
 const router = express.Router();
-const {AddEquation , AddLinearEquation} = require("../controllers/AddEquation");
-const {GetEquation , GetLinearEquation} = require("../controllers/GetEquation");
-router.get("/Getequation", GetEquation);
+const { AddEquation, AddLinearEquation, AddInterpolation, AddExtrapolation, AddIntegration, AddDifferentiation } = require("../controllers/AddEquation");
+const {GetRootEquation , GetLinearEquation , GetInterpolation ,GetExtrapolation , GetIntegration ,GetDifferentiation} = require("../controllers/GetEquation");
 router.post("/AddEquation" , AddEquation);
 router.get("/GetLinearEquation", GetLinearEquation);
-router.post("/AddLinearEquation" , AddLinearEquation);
+router.post("/AddLinearEquation", AddLinearEquation);
+router.post("/AddInterpolation", AddInterpolation);
+router.post("/AddExtrapolation", AddExtrapolation);
+router.post("/AddIntegration", AddIntegration);
+router.post("/AddDifferentiation", AddDifferentiation);
+router.get("/GetInterpolation", GetInterpolation);
+router.get("/GetExtrapolation" ,GetExtrapolation);
+router.get("/GetIntegration",GetIntegration);
+router.get("/GetDifferentiation" , GetDifferentiation);
+router.get("/GetRootEquation" , GetRootEquation);
 module.exports = router;
