# controllers/GetEquation.js
@@ -1,17 +1,56 @@
 const prisma = require('../lib/prisma');
-exports.GetEquation = async (req, res) => {
+
+exports.GetLinearEquation = async (req, res) => {
+    try{
+        const equation = await prisma.LinearQuestion.findMany();
+        return res.status(200).json({ "equation": equation});
+    }catch (err){
+        console.error("Error fetching equations:", err);
+        return res.status(404).json({ "Message": err.message });
+    }
+}
+exports.GetRootEquation = async (req, res) => {
     try {
-        const equation = await prisma.Question.findMany();
+        const equation = await prisma.RootQuestion.findMany();
         return res.status(200).json({ "equation": equation });
     } catch (err) {
         console.error("Error fetching equations:", err);
         return res.status(404).json({ "Message": err.message });
     }
 };
-
-exports.GetLinearEquation = async (req, res) => {
+exports.GetInterpolation = async (req, res) => {
     try{
-        const equation = await prisma.LinearQuestion.findMany();
+        const equation = await prisma.InterpolationQuestion.findMany();
+        return res.status(200).json({ "equation": equation});
+    }catch (err){
+        console.error("Error fetching equations:", err);
+        return res.status(404).json({ "Message": err.message });
+    }
+}
+
+exports.GetExtrapolation = async (req, res) => {
+    try{
+        const equation = await prisma.ExtrapolationQuestion.findMany();
+        return res.status(200).json({ "equation": equation});
+    }catch (err){
+        console.error("Error fetching equations:", err);
+        return res.status(404).json({ "Message": err.message });
+    }
+}
+
+exports.GetIntegration = async (req, res) => {
+    try{
+        const equation = await prisma.IntegrationQuestion.findMany();
+        return res.status(200).json({ "equation": equation});
+    }catch (err){
+        console.error("Error fetching equations:", err);
+        return res.status(404).json({ "Message": err.message });
+    }
+}
+
+exports.GetDifferentiation = async (req, res) => {
+    try{
+        const equation = await prisma.DifferentiationQuestion.findMany();
         return res.status(200).json({ "equation": equation});
     }catch (err){
         console.error("Error fetching equations:", err);
